--- a/ommig.html
+++ b/ommig.html
@@ -23,6 +23,7 @@
         <div class="box1">
             <h1>OM MIG</h1>
         </div>
+        <--Det finns en till tom låda jag tog inte bort dem för att jag trodde griden kommer att förstörs-->
         <div class="box2">
         </div>
 
@@ -35,7 +36,6 @@
             <img class="mebild" src="me.jpeg" alt="me">
         </div>
         <div>
-            <!--<a href="grid.html"><img class="links" src="home3.png" alt="HomePage"></a>--->
             <a href="https://osu.ppy.sh/users/13691856"><img class="links" src="osu.png" alt="Osu Profil"></a>
             <a href="https://twitch.tv/anzss/"><img class="links" src="twitch4.png" alt="Twitch"></a>
         </div>
